spock-specs/src/test/resources/snapshots/org/spockframework/smoke/parameterization/InvalidWhereBlocks/using_combined_label_outside_where_block_is_not_allowed.txt
Unable to produce AST for this phase due to earlier compilation error:
startup failed:
script.groovy: 2: 'combined' is not allowed here; instead, use one of: [setup, given, expect, when, cleanup, where, end-of-method] @ line 2, column 7.
         true
         ^

1 error